--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,3 +11,7 @@ parameters:
     checkMissingIterableValueType: true
     checkGenericClassInNonGenericObjectType: false
     reportUnmatchedIgnoredErrors: true
+    ignoreErrors:
+        - '#with null as default value.$#'
+        - '#is not allowed to extend#'
+        - '#should return Pest\\PendingCalls#'
